<resources>
    <string name="app_name" translatable="false">Bell</string>
    <string name="error_occurred">An error occurred</string>
    <string name="error_occurred_message">%s ran into an error. Please email the developer to get this issue fixed.</string>
    <string name="email_developer">Email developer</string>
    <string name="email" translatable="false">INSERT YOUR EMAIL</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="weather">Weather</string>
    <string name="government">Government</string>
    <string name="earthquake">Earthquake</string>
    <string name="water">Water</string>
    <string name="space_weather">Space Weather</string>
    <string name="health">Health</string>
    <string name="volcano">Volcano</string>
    <string name="other">Other</string>
    <string name="fire">Fire</string>
    <string name="travel">Travel</string>
    <string name="economy">Economy</string>
    <string name="crime">Crime</string>
    <string name="notifications">Notifications</string>
    <string name="sync_interval">Sync interval</string>
    <string name="sync_interval_summary">How often to check for new alerts</string>
    <string name="notification_categories">Notification categories</string>
    <string name="notification_categories_summary">Which alert categories trigger notifications</string>
    <string name="geophysical">Geophysical</string>
    <string name="meteorological">Meteorological</string>
    <string name="safety">Safety</string>
    <string name="security">Security</string>
    <string name="rescue">Rescue</string>
    <string name="environmental">Environmental</string>
    <string name="transport">Transport</string>
    <string name="infrastructure">Infrastructure</string>
    <string name="cbrne">CBRNE</string>
</resources>